<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="drivers.Activity.ProfileActivity">

    <EditText
        android:id="@+id/edtTxtHeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Height(cm)"
        android:ems="10"
        android:hint="@string/height_cm"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentHeightText" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupWeight2" />

    <RadioGroup
        android:id="@+id/radioGroupGender2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentGenderText">

        <RadioButton
            android:id="@+id/radioBtnMale2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/male"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioBtnFemale2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="16sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/edtTxtWeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Weight(kg)"
        android:ems="10"
        android:hint="@string/weight_kg"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentWeightText" />

    <EditText
        android:id="@+id/edtTxtAge2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Age"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentAgeText" />

    <RadioGroup
        android:id="@+id/radioGroupWeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentGoalText">

        <RadioButton
            android:id="@+id/radioBtnGain2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/gain_weight"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioBtnLose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lose_weight"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/currentGenderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/current_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTxtAge2" />

    <TextView
        android:id="@+id/currentHeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:text="@string/current_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/current_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtHeight2" />

    <TextView
        android:id="@+id/currentAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/current_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtWeight2" />

    <TextView
        android:id="@+id/currentGoalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/current_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender2" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/homeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageViewHome"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/homeBtnBtm"
                        android:onClick="openHomePage"
                        app:srcCompat="@drawable/bottom_btn1g"
                        tools:ignore="NestedWeights,UsingOnClickInXml" />

                    <TextView
                        android:id="@+id/textViewHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_5"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageViewProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/profilebtnbtm"
                        android:onClick="openProfilePage"
                        app:srcCompat="@drawable/bottom_btn2o"
                        tools:ignore="UsingOnClickInXml" />

                    <TextView
                        android:id="@+id/textViewProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_6"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageViewSupport"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/mealplan_btn"
                        android:onClick="openMealGeneratorPage"
                        app:srcCompat="@drawable/bottom_btn5g"
                        tools:ignore="NestedWeights,UsingOnClickInXml" />

                    <TextView
                        android:id="@+id/textViewSupport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meal_plan_5"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>